2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/PreferencesDialog.cs: Get preferences widget from newly
	  selected sync addin.

2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncServiceAddin.cs, Tomboy/SyncManager.cs,
	  Tomboy/Addins/FileSystemSyncService/FileSystemSyncServiceAddin.cs,
	  Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs,
	  Tomboy/Addins/SshSyncService/SshSyncServiceAddin.cs: Adding
	  SyncServiceAddin.PostSyncCleanup, which the FUSE backends use to
	  unmount the server when not in use.
	* Tomboy/Note.cs: Added TODO regarding trusting foreign note XML
	  content.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in, Makefile.include, Tomboy/Makefile.am, Tomboy/tomboy.in,
	  Makefile.am, po/POTFILES.in: Changed the location of Mono.Addins to
	  root of project.  Adjusted AM_INIT and AM_INIT_AUTOMAKE to allow
	  longer file paths when creating tarball.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in, Makefile.include, Tomboy/Makefile.am, Tomboy/tomboy.in,
	  Makefile.am, po/POTFILES.in: Changed the location of Mono.Addins to
	  root of project.  Adjusted AM_INIT and AM_INIT_AUTOMAKE to allow
	  longer file paths when creating tarball.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Mono.Addins: Moved to root of project in hopes that it will
	  solve the problem of make distcheck.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/PreferencesDialog.cs: Added a TODO comment about removing
	  ~/.tomboy/manifest.xml.
	* Tomboy/Tomboy.cs: Added code to allow note files to be added/opened
	  from anywhere on the machine (added primarily for the Giver
	  project).

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Makefile.am: Removed trailing whitespace causing build
	  failure.

2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in, Tomboy.mdp, Tomboy/Addins/Makefile.am,
	  Tomboy/Addins/SshSyncService,